--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     // 方法前面有是否有空格
     "space-before-function-paren": 0,
     // 默认不缩进
-    "indent": 0
+    "indent": 0,
+    "eslint-disable-next-line ": 0
   }
 }
