--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "babel-eslint": "^8.2.6",
     "react": "16.4.1",
     "react-dom": "16.4.1",
+    "react-rooter": "0.1.2",
+    "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
